services/plex/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: plexserver            # < name of ingress entry
#   namespace: plexserver       # < namespace where place the ingress enty

#   annotations:
#     kubernetes.io/ingress.class: "nginx"  # < use the nginx ingress controller
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # < communicate in https with the backend (service/pod)
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"     # < use letsencrypt-prod application in kubernetes to generate ssl certificate
#     nginx.ingress.kubernetes.io/app-root: /web             # < the root directory of the plex webserver
# spec:
#   rules:
#   - host: plexserver.mydomain.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: plex-tcp
#           servicePort: pms-web   # < same label as the port in the service tcp file
#   tls: # < placing a host in the TLS config will indicate a cert should be created
#   - hosts:
#     - plexserver.mydomain.com
#     secretName: plexserver.mydomain.com-tls # < cert-manager will store the created certificate in this secret.



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-oauth2-proxy
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: plex.kristinn.pro
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - plex.kristinn.pro
    secretName: cloudflare-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$http_host$request_uri
  name: plex-external-auth-oauth2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: plex.kristinn.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plexserver
            port:
              number: 32400
  tls:
  - hosts:
    - plex.kristinn.pro
    secretName: cloudflare-tls
